--- a/mbp-webapp/src/app/acceuil/acceuil.component.html
+++ b/mbp-webapp/src/app/acceuil/acceuil.component.html
@@ -1,4 +1,28 @@
 <div class="ACCUEIL">
-  <app-acceuil-carousel></app-acceuil-carousel>
+      <ngb-carousel>
+            <ng-template ngbSlide>
+              <div class="picsum-img-wrapper">
+                <img src="assets/img/photo_accueil/photo_accueil_5.jpg"  alt="Random first slide">
+              </div>
+              <div class="carousel-caption">
+                <h1>Rencontrez votre partenaire de sport ideal</h1>
+              </div>
+            </ng-template>
+            <ng-template ngbSlide>
+              <div class="carousel-caption">
+                <h1>Préparez et planifiez vos séances </h1>
+              </div>
+              <div class="picsum-img-wrapper">
+                <img src="assets/img/photo_accueil/photo_accueil_4.jpg"  alt="Random second slide">
+              </div>
+            </ng-template>
+            <ng-template ngbSlide>
+              <div class="picsum-img-wrapper">
+                <img src="assets/img/photo_accueil/photo_accueil_6.jpg"  alt="Random third slide">
+              </div>
+              <div class="carousel-caption">
+                <h1>Progressez et devenais plus fort</h1>
+              </div>
+            </ng-template>
+          </ngb-carousel>
 </div>
-
