--- a/mbp-webapp/src/app/navbar/navbar.component.html
+++ b/mbp-webapp/src/app/navbar/navbar.component.html
@@ -2,10 +2,10 @@
     <span class="navbar-brand mb-0 h1">My Body Partner</span>
     <ul class="nav">
         <li class="nav-item">
-            <button type="button" class="btn btn-light">Connexion</button>
+            <button type="button" class="btn btn-outline-light">Connexion</button>
         </li>
         <li class="nav-item">
-            <button type="button" class="btn btn-light">Inscription</button>
+            <button type="button" class="btn btn-outline-light">Inscription</button>
         </li>
       </ul>
 </nav>
