--- a/mbp-webapp/src/app/navbar/navbar.component.scss
+++ b/mbp-webapp/src/app/navbar/navbar.component.scss
@@ -1,8 +1,8 @@
 .btn{
-    margin: 0rem 1.5rem !important;
-    padding: 0.2rem 0.75rem !important;
+    margin: 0.25rem 1.5rem 0.25rem 1.5rem !important;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem !important;
 }
 
 .bg-mbp{
-    background-color:  #9c1919 !important;
+    background-color:  #6d0000 !important;
 }
