--- a/mbp-webapp/src/app/inscription/inscription.component.html
+++ b/mbp-webapp/src/app/inscription/inscription.component.html
@@ -16,9 +16,9 @@
         <div class="form-group">
             <label for="sex">Sexe</label>
             <select id="sex" class="form-control" formControlName="sex">
-                <option value='H'>Homme</option>
-                <option value='F'>Femme</option>
-                <option value='NC'>Autre</option>
+                <option value="H">Homme</option>
+                <option value="F">Femme</option>
+                <option value="NC">Autre</option>
             </select>
         </div>
         <div class="form-group">
