--- a/mbp-webapp/src/app/acceuil/acceuil.component.html
+++ b/mbp-webapp/src/app/acceuil/acceuil.component.html
@@ -21,7 +21,7 @@
                 <img src="assets/img/photo_accueil/photo_accueil_6.jpg"  alt="Random third slide">
               </div>
               <div class="carousel-caption">
-                <h1>Progressez et devenais plus fort</h1>
+                <h1>Progressez et devenez plus fort</h1>
               </div>
             </ng-template>
           </ngb-carousel>
