--- a/mbp-webapp/src/app/navbar/navbar.component.scss
+++ b/mbp-webapp/src/app/navbar/navbar.component.scss
@@ -6,3 +6,13 @@
 .bg-mbp{
     background-color:  #6d0000 !important;
 }
+
+.navbar{
+    height: 10% !important;
+}
+
+img{
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+}
