--- a/mbp-webapp/src/app/navbar/navbar.component.html
+++ b/mbp-webapp/src/app/navbar/navbar.component.html
@@ -1,11 +1,13 @@
-<nav class="navbar navbar-light bg-mbp">
-    <span class="navbar-brand mb-0 h1">My Body Partner</span>
-    <ul class="nav">
-        <li class="nav-item">
-            <button type="button" class="btn btn-outline-light">Connexion</button>
-        </li>
-        <li class="nav-item">
-            <button type="button" class="btn btn-outline-light">Inscription</button>
-        </li>
-      </ul>
-</nav>
+    <nav class="navbar navbar-light bg-mbp">
+        <a class="navbar-brand" routerLink="/acceuil">
+            <img id="img-logo-mbp-navbar" src="assets/img/logos/mbp_logo_blanc.png">
+        </a>
+        <ul class="nav">
+            <li class="nav-item">
+                <button type="button" class="btn btn-outline-light">Connexion</button>
+            </li>
+            <li class="nav-item">
+                <button type="button" class="btn btn-outline-light">Inscription</button>
+            </li>
+        </ul>
+    </nav>
