Correction de l'index + début de la création du style de l'application

--- a/mbp-webapp/src/app/app.component.scss
+++ b/mbp-webapp/src/app/app.component.scss
@@ -1,7 +1,14 @@
-.ACCUEIL{
-    max-height: 90%;
+body{
+    height: 100%;
+}
+
+.MBP_ACCUEIL{
+    height: 92vh;
+    max-height: 92vh;
 }
 
 .MBP_NAVBAR{
-    height: 10%;
+    height: 8vh;
+    max-height: 8vh;
 }
+
