--- a/mbp-webapp/src/app/app.component.html
+++ b/mbp-webapp/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-navbar></app-navbar>
-<div class="ACCUEIL">
+<div class="MBP_NAVBAR">
+    <app-navbar></app-navbar>
+</div>
+<div class="MBP_ACCUEIL">
     <app-acceuil></app-acceuil>
 </div>
