--- a/mbp-webapp/src/app/navbar/navbar.component.scss
+++ b/mbp-webapp/src/app/navbar/navbar.component.scss
@@ -8,7 +8,14 @@
 }
 
 .navbar{
-    height: 10% !important;
+    padding: 0rem 0.5rem 0rem 1rem !important;
+    height: 100% !important;
+}
+
+#label-navbar {
+    color : white !important;
+    padding-top: 0.5rem !important;
+    padding-left: 0.5rem !important;
 }
 
 img{
