--- a/mbp-webapp/src/app/acceuil/acceuil.component.html
+++ b/mbp-webapp/src/app/acceuil/acceuil.component.html
@@ -1,7 +1,7 @@
 <ngb-carousel>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img src="assets/img/photo_accueil/photo_accueil_5.jpg"  alt="Random first slide">
+      <img src="assets/img/photo_accueil/photo_accueil_5.jpg"  alt="Image d'accueil 1">
     </div>
     <div class="carousel-caption">
       <h1>Rencontrez votre partenaire de sport ideal</h1>
@@ -12,12 +12,12 @@
       <h1>Préparez et planifiez vos séances </h1>
     </div>
     <div class="picsum-img-wrapper">
-      <img src="assets/img/photo_accueil/photo_accueil_4.jpg"  alt="Random second slide">
+      <img src="assets/img/photo_accueil/photo_accueil_4.jpg"  alt="Image d'accueil 2">
     </div>
   </ng-template>
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
-      <img src="assets/img/photo_accueil/photo_accueil_6.jpg"  alt="Random third slide">
+      <img src="assets/img/photo_accueil/photo_accueil_6.jpg"  alt="Image d'accueil 3">
     </div>
     <div class="carousel-caption">
       <h1>Progressez et devenez plus fort</h1>
