Dev index correction et ajustement (#9)
* modif logo

* Correction de l'index + début de la création du style de l'application

* Correction Sonar

Co-authored-by: Clément Salvador <clementsalvador.isn@gmail.com>

--- a/mbp-webapp/src/app/app.component.scss
+++ b/mbp-webapp/src/app/app.component.scss
@@ -1,3 +1,14 @@
-.ACCUEIL{
-    height: 10px;
+body{
+    height: 100%;
 }
+
+.MBP_ACCUEIL{
+    height: 92vh;
+    max-height: 92vh;
+}
+
+.MBP_NAVBAR{
+    height: 8vh;
+    max-height: 8vh;
+}
+
