--- a/mbp-webapp/src/app/navbar/navbar.component.scss
+++ b/mbp-webapp/src/app/navbar/navbar.component.scss
@@ -6,3 +6,20 @@
 .bg-mbp{
     background-color:  #6d0000 !important;
 }
+
+.navbar{
+    padding: 0rem 0.5rem 0rem 1rem !important;
+    height: 100% !important;
+}
+
+#label-navbar {
+    color : white !important;
+    padding-top: 0.5rem !important;
+    padding-left: 0.5rem !important;
+}
+
+img{
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+}
