--- a/mbp-webapp/src/app/navbar/navbar.component.html
+++ b/mbp-webapp/src/app/navbar/navbar.component.html
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-light bg-mbp">
-    <span class="navbar-brand mb-0 h1">My Body Partner</span>
+    <a class="navbar-brand" routerLink="/acceuil">
+        <img id="img-logo-mbp-navbar" src="assets/img/logos/mbp_logo_blanc.png" width="50px" height="50px" class="d-inline-block align-top" alt="Logo MyBodyPartner"> 
+        <span id="label-navbar" class="d-inline-block">My Body Partner</span>
+    </a>
     <ul class="nav">
         <li class="nav-item">
             <button type="button" class="btn btn-outline-light">Connexion</button>
@@ -7,5 +10,5 @@
         <li class="nav-item">
             <button type="button" class="btn btn-outline-light">Inscription</button>
         </li>
-      </ul>
+    </ul>
 </nav>
