--- a/mbp-webapp/src/app/inscription/inscription.component.html
+++ b/mbp-webapp/src/app/inscription/inscription.component.html
@@ -4,12 +4,14 @@
         <div class="col-sm-4 col-offset-2">
             <form [formGroup]="inscriptionForm" (ngSubmit)="onSubmitForm()">
                 <div class="form-group">
-                    <label for="prenom">Prenom</label>
+                    <label for="prenom">Prénom</label>
                     <input type="text" class="form-control form-control-sm" id="prenom" formControlName="prenom">
+                    <p class="text-info">30 caractères maximum</p>
                 </div>
                 <div class="form-group">
                     <label for="nom">Nom</label>
                     <input type="text" class="form-control form-control-sm" id="nom" formControlName="nom">
+                    <p class="text-info">25 caractères maximum</p>
                 </div>
                 <div class="form-group">
                     <label for="bornDate">Date de naissance</label>
@@ -26,6 +28,7 @@
                 <div class="form-group">
                     <label for="adresse">Adresse</label>
                     <input type="text" class="form-control form-control-sm" id="adresse" formControlName="adresse">
+                    <p class="text-info">200 caractères maximum</p>
                 </div>
                 <div class="form-group">
                     <label for="sid">Salle de musculation</label>
@@ -40,6 +43,7 @@
                 <div class="form-group">
                     <label for="password">Mot de passe</label>
                     <input type="password" class="form-control form-control-sm" id="password" formControlName="password">
+                    <p class="text-info">Au moins 7 caractères avec 1 majuscule, 1 miniscule et 1 chiffre</p>
                 </div>
                 <button class="btn btn-primary" type="submit" [disabled]="inscriptionForm.invalid">S'inscrire</button>
             </form>
