--- a/mbp-webapp/src/assets/css/mbp_style.css
+++ b/mbp-webapp/src/assets/css/mbp_style.css
@@ -1,6 +1,30 @@
 /* Style de l'application */
 
 .MBP_CORPS{
-    height: 92vh;
-    background-color: #c6c6c6;
+    height: 100%;
+    background-color: white;
+}
+
+.MBP_CORPS_TITRE{
+    height: 10%;
+    width: 75%;
+    margin : 2.5% 12.5% 0% 12.5%;
+    padding : 1rem;
+    border : solid 1px #d9d7d7;
+    border-bottom: solid 3px #6d0000;
+}
+
+.MBP_CORPS_CONTENU{
+    height: 85%;
+    width: 75%;
+    padding: 1rem;
+    margin : 0% 12.5% 2.5% 12.5%;
+    border : solid 1px #d9d7d7;
+    border-top : 0px;
+}
+
+.MBP_BTN_SUBMIT{
+    float: right !important;
+    background-color: #6d0000 !important;
+    border-color: #6d0000 !important;
 }
