remise au propre

--- a/mbp-webapp/src/app/app.component.html
+++ b/mbp-webapp/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="MBP_NAVBAR">
     <app-navbar></app-navbar>
 </div>
-<div class="MBP_ACCUEIL">
+<div class="MBP_APP">
     <app-acceuil></app-acceuil>
 </div>
