--- a/mbp-webapp/src/app/navbar/navbar.component.html
+++ b/mbp-webapp/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     </a>
     <ul class="nav">
         <li class="nav-item">
-            <button type="button" class="btn btn-outline-light" routerLink="app-form-creation-annonce">Connexion</button>
+            <button type="button" class="btn btn-outline-light">Connexion</button>
         </li>
         <li class="nav-item">
             <button type="button" class="btn btn-outline-light">Inscription</button>
