--- a/mbp-webapp/src/app/navbar/navbar.component.html
+++ b/mbp-webapp/src/app/navbar/navbar.component.html
@@ -5,10 +5,10 @@
     </a>
     <ul class="nav">
         <li class="nav-item">
-            <button type="button" class="btn btn-outline-light">Connexion</button>
+            <button type="button" class="btn btn-outline-light" routerLinkActive="active">Connexion</button>
         </li>
         <li class="nav-item">
-            <button type="button" class="btn btn-outline-light">Inscription</button>
+            <button type="button" class="btn btn-outline-light"  color ="black" routerLinkActive="active" routerLink="signUp">Inscription</button>
         </li>
     </ul>
 </nav>
