--- a/mbp-webapp/src/app/app.component.html
+++ b/mbp-webapp/src/app/app.component.html
@@ -2,6 +2,6 @@
     <app-navbar></app-navbar>
 </div>
 <div class="MBP_ACCUEIL">
-    <app-acceuil></app-acceuil>
+   	<router-outlet></router-outlet>
 </div>
 
