--- a/mbp-webapp/src/app/navbar/navbar.component.html
+++ b/mbp-webapp/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-mbp">
-    <a class="navbar-brand" routerLink="/acceuil">
+    <a class="navbar-brand" routerLink="">
         <img id="img-logo-mbp-navbar" src="assets/img/logos/mbp_logo_blanc.png" width="50px" height="50px" class="d-inline-block align-top" alt="Logo MyBodyPartner"> 
         <span id="label-navbar" class="d-inline-block">My Body Partner</span>
     </a>
