page de login + page de logout + nav bar changeante

--- a/mbp-webapp/src/app/login/login.component.html
+++ b/mbp-webapp/src/app/login/login.component.html
@@ -1,34 +1,25 @@
-
-<!------ Include the above in your HEAD tag ---------->
-
-<body>
-    <div id="login">
-        <h3 class="text-center text-white pt-5">Login form</h3>
-        <div class="container">
-            <div id="login-row" class="row justify-content-center align-items-center">
-                <div id="login-column" class="col-md-6">
-                    <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" action="" method="post">
-                            <h3 class="text-center text-info">Connexion</h3>
-                            <div class="form-group">
-                                <label for="username" class="text-info">Username:</label><br>
-                                <input type="text" name="username" id="username" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="text-info">Password:</label><br>
-                                <input type="text" name="password" id="password" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="remember-me" class="text-info"><a >Mot de passe oublié</a></label><br>
-                                <input type="submit" name="submit" class="btn btn-info btn-md" value="Valider">
-                            </div>
-                            <div id="register-link" class="text-right">
-                                <a [routerLink]="['/signUp']" class="text-info">S'inscrire</a>
-                            </div>
-                        </form>
-                    </div>
+<h1 class="h1 text-center mb-5">Connexion</h1>
+<div class="container">
+    <div class="row justify-content-center ">
+        <div class="col-sm-4 col-offset-2">
+            <form [formGroup]="loginForm" (ngSubmit)="onSubmitForm()">
+                <div class="form-group">
+                    <label for="email">E-mail</label>
+                    <input type="text" class="form-control form-control-sm" id="email" formControlName="email">
                 </div>
-            </div>
+                <div class="form-group">
+                    <label for="password">Mot de passe</label>
+                    <input type="password" class="form-control form-control-sm" id="password" formControlName="password">
+                </div>
+
+                <div class="row">
+                    <div class="col-8"></div>
+                        <div class="col-4">
+                            <button class="btn btn-primary"  type="submit" [disabled]="loginForm.invalid">Valider</button>
+                        </div>
+                </div>
+            </form>
+        <p class="text-danger">{{errorMessage}}</p>
         </div>
     </div>
-</body>
+</div>
