design formulaire inscription

--- a/mbp-webapp/src/app/app.component.scss
+++ b/mbp-webapp/src/app/app.component.scss
@@ -1,14 +1,3 @@
-body{
-    height: 100%;
-}
+//css
 
-.MBP_APP{
-    height: 92vh;
-    max-height: 92vh;
-}
-
-.MBP_NAVBAR{
-    height: 8vh;
-    max-height: 8vh;
-}
 
