--- a/mbp-webapp/src/app/navbar/navbar.component.html
+++ b/mbp-webapp/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-mbp">
     <a class="navbar-brand" routerLink="">
-        <img id="img-logo-mbp-navbar" src="assets/img/logos/mbp_logo_blanc.png" width="50px" height="50px" class="d-inline-block align-top" alt="Logo MyBodyPartner"> 
+        <img id="img-logo-mbp-navbar" src="assets/img/logos/mbp_logo_blanc.png" width="50px" height="50px" class="d-inline-block align-top" alt="Logo MyBodyPartner">
         <span id="label-navbar" class="d-inline-block">My Body Partner</span>
     </a>
     <ul class="nav" *ngIf="!currentUser" >
@@ -12,6 +12,9 @@
         </li>
     </ul>
     <ul class="nav" *ngIf="currentUser" >
+        <li class="nav-item">
+          <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="createAdvert">Créer annonce</button>
+        </li>
         <li class="nav-item">
             <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="myAccount">Mon Compte</button>
         </li>
