--- a/mbp-webapp/src/app/form-creation-annonce/form-creation-annonce.component.html
+++ b/mbp-webapp/src/app/form-creation-annonce/form-creation-annonce.component.html
@@ -10,7 +10,7 @@
           <input type="text" id="NomCreaAnnonce" class="form-control" placeholder="Nom de votre annonce" formControlName="NomCreaAnnonce">
         </div>
         <div class="form-group col">
-          <label for="NiveauCreaAnnonce">Sexe</label>
+          <label for="NiveauCreaAnnonce">Niveau pratiquant</label>
           <select id="NiveauCreaAnnonce" class="form-control form-control-sm" formControlName="NiveauCreaAnnonce">
             <option value="DEBUTANT">Débutant</option>
             <option value="AMATEUR">Amateur</option>
