ajout de la liste des annonces

--- a/mbp-webapp/src/app/navbar/navbar.component.html
+++ b/mbp-webapp/src/app/navbar/navbar.component.html
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="createAdvert">Créer annonce</button>
         </li>
+      <li class="nav-item">
+        <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="listAdverts">Liste des annonces</button>
+      </li>
         <li class="nav-item">
             <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="myAccount">Mon Compte</button>
         </li>
