modif style navbar + changement navbar en fonction du role

--- a/mbp-webapp/src/app/navbar/navbar.component.scss
+++ b/mbp-webapp/src/app/navbar/navbar.component.scss
@@ -7,6 +7,15 @@
     background-color:  #6d0000 !important;
 }
 
+.nav-link{
+  color: white !important;  
+}
+
+.nav-link:hover{
+    color:gray !important;
+}
+
+
 .navbar{
     padding: 0rem 0.5rem 0rem 1rem !important;
     height: 100% !important;
