--- a/mbp-webapp/src/app/navbar/navbar.component.html
+++ b/mbp-webapp/src/app/navbar/navbar.component.html
@@ -1,28 +1,57 @@
-<nav class="navbar navbar-light bg-mbp">
+<nav class="navbar navbar-light bg-mbp navbar-expand-lg">
     <a class="navbar-brand" routerLink="">
         <img id="img-logo-mbp-navbar" src="assets/img/logos/mbp_logo_blanc.png" width="50px" height="50px" class="d-inline-block align-top" alt="Logo MyBodyPartner">
         <span id="label-navbar" class="d-inline-block">My Body Partner</span>
     </a>
-    <ul class="nav" *ngIf="!currentUser" >
-        <li class="nav-item">
+    <div id="navbar-no-user"  class="collapse navbar-collapse" *ngIf="!currentUser">
+        <ul class="navbar-nav mr-auto"></ul>
+        <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="signIn">Connexion</button>
+        <button type="button" class="btn btn-outline-light"  color ="black" routerLinkActive="active" routerLink="signUp">Inscription</button>
+    </div>
+    <div id="navbar-user" class="collapse navbar-collapse" *ngIf="currentUser &&  !isAdmin">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item ">
+              <a class="nav-link d-inline-block" routerLinkActive="active" routerLink="createAdvert">Créer annonce</a>     
+            </li>
+          <li class="nav-item">
+            <a class="nav-link d-inline-block" routerLinkActive="active" routerLink="listAdverts">Liste des annonces</a>     
+          </li>
+        </ul>
+        <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="myAccount">Mon Compte</button>    
+        <button type="button" class="btn btn-outline-light"  color ="black" (click)="logout()">Logout</button>
+    </div>
+    <!-- <ul class="nav" *ngIf="!currentUser" >
+        <li class="nav-item mr-auto">
             <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="signIn">Connexion</button>
         </li>
-        <li  class="nav-item">
+        <li  class="nav-item mr-auto">
             <button type="button" class="btn btn-outline-light"  color ="black" routerLinkActive="active" routerLink="signUp">Inscription</button>
         </li>
-    </ul>
-    <ul class="nav" *ngIf="currentUser" >
-        <li class="nav-item">
+    </ul> -->
+   <!-- <ul class="nav" *ngIf="currentUser &&  !isAdmin">
+        <li class="nav-item ">
           <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="createAdvert">Créer annonce</button>
         </li>
       <li class="nav-item">
         <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="listAdverts">Liste des annonces</button>
       </li>
-        <li class="nav-item">
+        <li class="nav-item mr-auto">
             <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="myAccount">Mon Compte</button>
         </li>
-        <li  class="nav-item">
+        <li  class="nav-item mr-auto">
             <button type="button" class="btn btn-outline-light"  color ="black" (click)="logout()">Logout</button>
         </li>
-    </ul>
+    </ul> -->
+    <div id="navbar-admin" class="collapse navbar-collapse" *ngIf="currentUser && isAdmin">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link d-inline-block" routerLinkActive="active" routerLink="">Utilisateurs</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLinkActive="active" routerLink="">Messagerie</a>
+            </li>
+        </ul>
+        <button type="button" class="btn btn-outline-light" routerLinkActive="active" routerLink="myAccount">Mon Compte</button>    
+        <button type="button" class="btn btn-outline-light"  color ="black" (click)="logout()">Logout</button>
+    </div>
 </nav>
