--- a/mbp-webapp/src/app/profil/profil.component.html
+++ b/mbp-webapp/src/app/profil/profil.component.html
@@ -3,80 +3,117 @@
         <div class="h2 text-center">Mon Profil</div>
     </div>
     <div class="MBP_CORPS_CONTENU"> 
-        <div class="row MBP-top5">
-            <div class="col-6 MBP-padding-left-10">
-				<label>Prénom : </label>
+		<form [formGroup]="profilForm" (ngSubmit)="onSubmitForm()">
+        	<div class="row MBP-top5">
+            	<div class="col-6 MBP-padding-left-10">
+					<label>Prénom : </label>
+				</div>
+				<div class="col-6">
+					<input type="text" class="form-control form-control-sm" 
+					 id="prenom" readonly="readonly" formControlName="prenom">		
+				</div>
+        	</div>
+        	<div class="row MBP-top5">
+        	   <div class="col-6 MBP-padding-left-10">
+					<label>Nom : </label>
+				</div>
+				<div class="col-6">
+					<input type="text" class="form-control form-control-sm" 
+					id="nom" readonly="readonly" formControlName="nom">			
+				</div>
+        	</div>
+			<div class="MBP_LINE_1PX MBP-top5"></div>  
+        	<div class="row MBP-top5">
+            	<div class="col-6 MBP-padding-left-10">
+					<label>Date de naissance : </label>
+				</div>
+				<div class="col-6">
+					<input type="text" class="form-control form-control-sm" formControlName="bornDate"
+					id="bornDate" readonly="readonly">			
+				</div>
+        	</div>
+        	<div class="row MBP-top5">
+        	    <div class="col-6 MBP-padding-left-10">
+					<label>Sexe : </label>
+				</div>
+				<div class="col-6">
+					<input type="text" class="form-control form-control-sm" readonly="readonly"
+					id="sexe" [value]="myUser.sexe === 'H' ? 'Homme' : myUser.sexe === 'F' ? 'Femme' : 'Autre'">		
+				</div>
+        	</div>
+			<div class="MBP_LINE_1PX MBP-top5"></div>  
+        	<div class="row MBP-top5">
+        	    <div class="col-6 MBP-padding-left-10">
+					<label>Adresse : </label>
+				</div>
+				<div class="col-6">
+					<input type="text" class="form-control form-control-sm" 
+					id="adresse" formControlName="adresse">			
+				</div>
 			</div>
-			<div class="col-6">
-				<input type="text" class="form-control form-control-sm" 
-				 value="{{user.prenom}}" readonly="readonly">		
+			<div class="row MBP-top5">
+        	    <div class="col-6 MBP-padding-left-10">
+					<label>Salle de musculation actuelle : </label>
+				</div>
+				<div class="col-6">
+					<input type="text" class="form-control form-control-sm" 
+					disabled="disabled" [value]="myUser.sid.nom">
+				</div>
 			</div>
-        </div>
-        <div class="row MBP-top5">
-           <div class="col-6 MBP-padding-left-10">
-				<label>Nom : </label>
+			<div class="row MBP-top5">
+				<div class="col-6 MBP-padding-left-10">
+					<label>Changer de salle :</label>
+				</div>
+				<div class="col-6">
+        	        <select id="sid" class="form-control form-control-sm" formControlName="sid">
+            	        <option *ngFor="let salle of obsSalles | async" value="{{salle.sid}}">{{salle.nom}}</option>
+            	    </select>
+           	 	</div>
 			</div>
-			<div class="col-6">
-				<input type="text" class="form-control form-control-sm" 
-				value="{{user.nom}}" readonly="readonly">			
+			<div class="MBP_LINE_1PX MBP-top5"></div>  
+        	<div class="row MBP-top5">
+        	    <div class="col-6 MBP-padding-left-10">
+					<label>E-mail : </label>
+				</div>
+				<div class="col-6">
+					<input type="text" class="form-control form-control-sm" 
+					id="username" disabled="disabled" formControlName="username">			
+				</div>
 			</div>
-        </div>
-		<div class="MBP_LINE_1PX MBP-top5"></div>  
-        <div class="row MBP-top5">
-            <div class="col-6 MBP-padding-left-10">
-				<label>Date de naissance : </label>
+			<div class="row MBP-top5">
+        	    <div class="col-6 MBP-padding-left-10">
+					<label>Changer de mot passe : </label>
+				</div>
+				<div class="col-6">
+					<input type="password" class="form-control form-control-sm" formControlName="password">		
+					<p class="text-info">Au moins 7 caractères avec 1 majuscule, 1 miniscule et 1 chiffre</p>
+					<p class="text-danger" *ngIf="this.getHashedPassword(this.profilForm.value['password']) === myUser.password">Ce mot de passe est identique au mot de passe actuel !</p>
+				</div>
 			</div>
-			<div class="col-6">
-				<input type="text" class="form-control form-control-sm" 
-				value="{{user.bornDate | date: 'dd/MM/yyyy'}}" readonly="readonly">			
+			<div class="row MBP-top5">
+            	<div class="col-6 MBP-padding-left-10">
+					<label>Confirmer nouveau mot de passe : </label>
+				</div>
+				<div class="col-6">
+					<input type="password" class="form-control form-control-sm" 
+					id="confirmpassword" formControlName="confirmpassword">			
+					<p class="text-danger" *ngIf="this.profilForm.value['password'] !== this.profilForm.value['confirmpassword']">Les mots de passe ne sont pas identiques</p>
+				</div>
 			</div>
-        </div>
-        <div class="row MBP-top5">
-            <div class="col-6 MBP-padding-left-10">
-				<label>Sexe : </label>
-			</div>
-			<div class="col-6">
-				<input type="text" class="form-control form-control-sm" 
-				*ngIf="user.sexe == 'H'" value="Homme" readonly="readonly">	
-				<input type="text" class="form-control form-control-sm" 
-				*ngIf="user.sexe == 'F'" value="Femme" readonly="readonly">
-				<input type="text" class="form-control form-control-sm" 
-				*ngIf="user.sexe == 'NC'" value="Autre" readonly="readonly">		
-			</div>
-        </div>
-		<div class="MBP_LINE_1PX MBP-top5"></div>  
-        <div class="row MBP-top5">
-            <div class="col-6 MBP-padding-left-10">
-				<label>Adresse : </label>
-			</div>
-			<div class="col-6">
-				<input type="text" class="form-control form-control-sm" 
-				value="{{user.adresse}}" readonly="readonly">			
-			</div>
-		</div>
-		<div class="row MBP-top5">
-            <div class="col-6 MBP-padding-left-10">
-				<label>Salle : </label>
-			</div>
-			<div class="col-6">
-				<input type="text" class="form-control form-control-sm" 
-				value="{{user.sid.nom}}" readonly="readonly">			
-			</div>
-        </div>
-        <div class="row MBP-top5">
-            <div class="col-6 MBP-padding-left-10">
-				<label>E-mail : </label>
-			</div>
-			<div class="col-6">
-				<input type="text" class="form-control form-control-sm" 
-				value="{{user.username}}" readonly="readonly">			
-			</div>
-		</div>
-		<div class="MBP_LINE_1PX MBP-top5"></div>  
-        <div class="row MBP-top5">
-            <div class="col-6 MBP-padding-left-10">
-				<button class="btn btn-danger">Résilier mon compte</button>
-			</div>
-		</div>	
+			<div class="MBP_LINE_1PX MBP-top5"></div>  
+        	<div class="row MBP-top5">
+            	<div class="col-6 MBP-padding-left-10">
+					<button class="btn btn-danger">Résilier mon compte</button>
+				</div>
+				<div class="col-6">
+					<button class="btn float-right MBP_BTN_SUBMIT" type="submit" 
+					*ngIf="this.profilForm.value['adresse'] !== myUser.adresse || 
+					(+this.profilForm.value['sid'] !== myUser.sid.sid && +this.profilForm.value['sid'] !==0) || 
+					(this.profilForm.value['password'] !== '' &&
+					this.getHashedPassword(this.profilForm.value['password']) !== myUser.password)"
+					[disabled]="profilForm.invalid">Enregistrer mes informations</button>
+				</div>
+			</div>	
+		</form>
     </div>
 </div>
