--- a/mbp-webapp/src/app/navbar/navbar.component.html
+++ b/mbp-webapp/src/app/navbar/navbar.component.html
@@ -23,7 +23,7 @@
     <div id="navbar-admin" class="collapse navbar-collapse" *ngIf="currentUser && isAdmin">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link d-inline-block" routerLinkActive="active" routerLink="">Utilisateurs</a>
+                <a class="nav-link d-inline-block" routerLinkActive="active" routerLink="listeUser">Utilisateurs</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLinkActive="active" routerLink="">Messagerie</a>
