reset password implemented

--- a/mbp-webapp/src/app/login/login.component.html
+++ b/mbp-webapp/src/app/login/login.component.html
@@ -20,6 +20,13 @@
                 </div>
                 <div class="col-3"></div>
             </div>
+            <div class="form-group row">
+                <div class="col-3"></div>
+                <div class="col-6">
+            	<a routerLink="/resetPassword" routerLinkActive="active" class="stretched-link">Mot de passe oublié</a>
+                </div>
+                <div class="col-3"></div>
+            </div>
             <div class="row">
                 <div class="col-12">
                     <button class="btn MBP_BTN_SUBMIT float-right"  type="submit" [disabled]="loginForm.invalid">Valider</button>
