--- a/mbp-webapp/src/app/profil/profil.component.scss
+++ b/mbp-webapp/src/app/profil/profil.component.scss
@@ -23,3 +23,14 @@ body {
 }
 
 .MBP-top5 { margin-top:2%; }
+
+.MBP-center {
+  padding-left: 9%;
+}
+
+.MBP-alert {
+  position: fixed; 
+  top: 50%; 
+  right: 0; 
+  width: 20%
+}
